add some detail in tech section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
-                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Halo There👋<span
+                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hello There👋<span
                             class="block font-bold text-dark text-4xl mt-1">Ramdlan Faqih</span></h1>
                     <h2 class="font-medium text-secondary text-lg mt-2 mb-5">Tech Enthusiast - Web Developer - Mobile
                         Developer</h2>
@@ -183,12 +183,11 @@
     <section id="tech" class="pt-36 pb-32 bg-slate-800 ">
         <div class="container">
             <div class="w-full px-4">
-                <div class="max-w-xl mx-auto text-center mb-16">
-                    <h2 class="font-bold text-primary text-3xl mb-4">Tech that i learned</h2>
-                    <p class="font-medium text-md text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Repellendus repudiandae iure aliquam eveniet quaerat nihil aut nemo ut sapiente nam.</p>
+                <div class="max-w-2xl mx-auto text-center mb-16">
+                    <h2 class="font-bold text-primary text-3xl mb-4">My Tech Journey</h2>
+                    <p class="font-medium text-md text-white">Embarking on a fascinating journey, I've delved into a spectrum of programming languages, frameworks, and libraries, unlocking the door to a world of endless possibilities in the realm of technology. Below are some of the technologies I've immersed myself in:</p>
                 </div>
-                <div class="flex flex-wrap items-center justify-center">
+                <div class="flex flex-wrap items-center justify-center lg:max-w-5xl mx-auto">
                     <div class="max-w-[120px] mx-4 py-4  lg:mx-6 xl:mx-8">
                         <img src="dist/img/portofolio/html.svg" alt="sss" class="w-full">
                     </div>
