--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                             class="block font-bold text-dark text-4xl mt-1">Ramdlan Faqih</span></h1>
                     <h2 class="font-medium text-secondary text-lg mt-2 mb-5">Tech Enthusiast - Web Developer - Mobile
                         Developer</h2>
-                    <p class="font-medium text-secondary mb-10">"Technology are very important in the modern world, as
-                        they enable us to communicate, learn, create something, and solve problems"</p>
+                    <p class="font-medium text-secondary mb-10">"I am a frontend developer specializing in React and
+                        React Native, with experience in web and mobile application development. I am a quick learner,
+                        highly motivated, and capable of working independently or in a team. "</p>
                     <a href="#"
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-90 transition duration-300 ease-in-out">Contact
                         Me</a>
@@ -182,7 +183,8 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-xl overflow-hidden">
-                        <a href="https://drive.google.com/file/d/1fqPb2mm_q4PjctXAyLd2cdtI0CnLZrIm/view?usp=drive_link" target="_blank">
+                        <a href="https://drive.google.com/file/d/1fqPb2mm_q4PjctXAyLd2cdtI0CnLZrIm/view?usp=drive_link"
+                            target="_blank">
                             <img src="dist/img/portofolio/mamarecipemobile.png" alt="mamaRecipeMobile" width="w-full">
                         </a>
                     </div>
@@ -318,10 +320,8 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="font-semibold text-primary text-2xl mb-4 lg:text-3xl lg:pt-10">Let's Connect</h3>
-                    <p class="font-medium text-base text-white lg:text-lg">Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Cupiditate quidem quas minus, officiis debitis, itaque eum tempore sunt, ullam
-                        perspiciatis unde! Asperiores illo iure dolorum, itaque at officiis ea exercitationem!</p>
+                    <h3 class="font-semibold text-primary text-2xl mb-4 lg:text-3xl lg:pt-10">Contact</h3>
+                  
                     <div class="flex items-center mt-5">
                         <!-- instagram -->
                         <a href="https://www.instagram.com/ramfaqjirou" target="_blank"
