--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
                             class="block font-bold text-dark text-4xl mt-1">Ramdlan Faqih</span></h1>
                     <h2 class="font-medium text-secondary text-lg mt-2 mb-5">Tech Enthusiast - Web Developer - Mobile
                         Developer</h2>
-                    <p class="font-medium text-secondary mb-10">"I am a frontend developer specializing in React and
-                        React Native, with experience in web and mobile application development. I am a quick learner,
-                        highly motivated, and capable of working independently or in a team. "</p>
+                    <p class="font-medium text-secondary mb-10">"I am a quick learner,
+                        highly motivated, and capable of working independently or in a team."</p>
                     <a href="#"
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-90 transition duration-300 ease-in-out">Contact
                         Me</a>
@@ -82,9 +81,8 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-xl mb-3">About Me</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Passionate learner</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Coffee lover, code writer, and
-                        lifelong learner. Thrives on tackling new challenges every day.</p>
+                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Frontend Developer</h2>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">I am a frontend developer specializing in React and React Native, with experience in web and mobile application development. I am a quick learner, highly motivated, and capable of working independently or in a team. I graduated from Pijar Camp's Fullstack Web & Mobile Developer bootcamp by Telkom Indonesia. I have a broad interest in all things tech.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Let's Connect</h3>
@@ -159,6 +157,34 @@
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-xl overflow-hidden">
                         <a href="https://mama-recipe-redux.vercel.app" target="_blank">
+                            <img src="dist/img/portofolio/visi8.png" alt="mama-recipe-redux" width="w-full">
+                        </a>
+                    </div>
+                    <h3 class="font-semibold text-dark text-xl mt-5 mb-3">VISI8 Mobile Apps</h3>
+                    <p class="font-medium text-base text-secondary">Visi8 Comic - Storytelling revolution</p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-xl overflow-hidden">
+                        <a href="https://mama-recipe-redux.vercel.app" target="_blank">
+                            <img src="dist/img/portofolio/aca.png" alt="mama-recipe-redux" width="w-full">
+                        </a>
+                    </div>
+                    <h3 class="font-semibold text-dark text-xl mt-5 mb-3">AcaSpace</h3>
+                    <p class="font-medium text-base text-secondary">Material generator using openAI</p>
+                </div>
+                <!-- <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-xl overflow-hidden">
+                        <a href="https://mama-recipe-redux.vercel.app" target="_blank">
+                            <img src="dist/img/portofolio/mamarecipe.png" alt="mama-recipe-redux" width="w-full">
+                        </a>
+                    </div>
+                    <h3 class="font-semibold text-dark text-xl mt-5 mb-3">ERP-REPORT</h3>
+                    <p class="font-medium text-base text-secondary">Daily reporting Apps about installation site on FTTH Project (Fiber To The Home)
+                    </p>
+                </div> -->
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-xl overflow-hidden">
+                        <a href="https://mama-recipe-redux.vercel.app" target="_blank">
                             <img src="dist/img/portofolio/mamarecipe.png" alt="mama-recipe-redux" width="w-full">
                         </a>
                     </div>
@@ -205,6 +231,15 @@
                         seekers and recruiters. Recruiters can search and filter potential candidates. For Job Seekers,
                         they can edit their personal details. Job seekers can also add their work experience and
                         portfolio information</p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-xl overflow-hidden">
+                        <a href="https://peworld-next-lac.vercel.app/" target="_blank">
+                            <img src="dist/img/portofolio/sisurti.png" alt="peworld" width="w-full">
+                        </a>
+                    </div>
+                    <h3 class="font-semibold text-dark text-xl mt-5 mb-3">SISURTI BIG</h3>
+                    <p class="font-medium text-base text-secondary">Sistem Informasi Surveyor Pemetaan Indonesia - Badan Informasi Geospasial</p>
                 </div>
             </div>
         </div>
