--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-xl overflow-hidden">
-                        <a href="https://mama-recipe-redux.vercel.app" target="_blank">
-                            <img src="dist/img/portofolio/visi8.png" alt="mama-recipe-redux" width="w-full">
+                        <a href="https://play.google.com/store/apps/details?id=com.visi8.webcomicmain" target="_blank">
+                            <img src="dist/img/portofolio/visi8.png" alt="visi8" width="w-full">
                         </a>
                     </div>
                     <h3 class="font-semibold text-dark text-xl mt-5 mb-3">VISI8 Mobile Apps</h3>
@@ -165,8 +165,8 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-xl overflow-hidden">
-                        <a href="https://mama-recipe-redux.vercel.app" target="_blank">
-                            <img src="dist/img/portofolio/aca.png" alt="mama-recipe-redux" width="w-full">
+                        <a href="https://fe-acaspace.vercel.app/" target="_blank">
+                            <img src="dist/img/portofolio/aca.png" alt="acaspace" width="w-full">
                         </a>
                     </div>
                     <h3 class="font-semibold text-dark text-xl mt-5 mb-3">AcaSpace</h3>
@@ -234,8 +234,8 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-xl overflow-hidden">
-                        <a href="https://peworld-next-lac.vercel.app/" target="_blank">
-                            <img src="dist/img/portofolio/sisurti.png" alt="peworld" width="w-full">
+                        <a href="https://surti.big.go.id/" target="_blank">
+                            <img src="dist/img/portofolio/sisurti.png" alt="sisurti" width="w-full">
                         </a>
                     </div>
                     <h3 class="font-semibold text-dark text-xl mt-5 mb-3">SISURTI BIG</h3>
